syntax = "proto3";

package protobuf_boilerplate;

import "google/protobuf/empty.proto";

option go_package = "pkg/protobuf_boilerplate";

message CreateGuestRequestVM {
    string name = 1;
    string address = 2;
}

message DeleteGuestByIDRequestVM {
    string id = 1;
}

message FindAllGuestRequestVM {
    string keyword = 1;
    string sorts = 2;
    uint64 take = 3;
    uint64 skip = 4;
}

message FindAllGuestResponseVM {
    repeated GuestResponseVM list = 1;
    uint64 count = 2;
}

message FindGuestByIDRequestVM {
    string id = 1;
}

message GuestResponseVM {
    string id = 1;
    string name = 2;
    string address = 3;
    int64 created_at = 4;
    string created_by = 5;
    int64 updated_at = 6;
    string updated_by = 7;
}

message UpdateGuestByIDRequestVM {
    string id = 1;
    string name = 2;
    string address = 3;
}

service Boilerplate {
    rpc CreateGuest(CreateGuestRequestVM) returns (GuestResponseVM);
    rpc DeleteGuestByID(DeleteGuestByIDRequestVM) returns (google.protobuf.Empty);
    rpc FindAllGuest(FindAllGuestRequestVM) returns (FindAllGuestResponseVM);
    rpc FindGuestByID(FindGuestByIDRequestVM) returns (GuestResponseVM);
    rpc UpdateGuestByID(UpdateGuestByIDRequestVM) returns (GuestResponseVM);
}
